# django-notices

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
notices/: admin.py  context_processors.py  models.py
notices/example_project/example_app/: views.py
notices/example_project/example_app/templates/example_app/: home.html
notices/example_project/example_project/: settings.py  urls.py  wsgi.py
notices/migrations/: 0001_initial.py  0002_alter_notice_version.py  0003_notice_timeout_seconds.py  0004_notice_starts_at.py
notices/static/notices/css/: notices.css
notices/static/notices/js/: notices.js
notices/templates/notices/: notices.html  notices_clear.html
notices/templatetags/: notices_tags.py
tests/: conftest.py  test_models.py  test_notices.py  test_notices_from_model.py  test_notices_from_settings.py  test_utils.py
